Source/WebCore/Modules/webaudio/DelayDSPKernel.h
@@ -58,6 +58,7 @@ private:
     double m_desiredDelayFrames;
 
     DelayProcessor* delayProcessor() { return static_cast<DelayProcessor*>(processor()); }
+    size_t bufferLengthForDelay(double delayTime, double sampleRate) const;
 };
 
 } // namespace WebCore
